--- a/About Us.html
+++ b/About Us.html
@@ -113,11 +113,11 @@
             <h1>About Thabi's Sausage and Grill</h1>
             <!-- Image Gallery with responsive images -->
             <div class="gallery">
-                <img src="Images/Mr Phala.JPG" alt="Mr Phala, founder of Thabi's Sausage and Grill">
+                <img src="Images/Mr_Phala.JPG" alt="Mr Phala, founder of Thabi's Sausage and Grill">
                 <img src="Images/Lebo.jpg" alt="Lebo, manager at Thabi's Sausage and Grill">
                 <img src="Images/Employee.jpg" alt="Employee working at Thabi's Sausage and Grill">
                 <img src="Images/IMG_0987.JPG" alt="Delicious sausage served at Thabi's Sausage and Grill">
-                <img src="Images/IMG_0999.JPG" alt="Freshly grilled meal from Thabi's Sausage and Grill">
+              <img src="Images/IMG_0999.JPG" alt="Freshly grilled meal from Thabi's Sausage and Grill">
                 <img src="Images/IMG_1008.JPG" alt="Another mouth-watering dish from Thabi's Sausage and Grill">
                 <img src="Images/IMG_8916.JPG" alt="Food preparation at Thabi's Sausage and Grill food truck">
             </div>
