--- a/Index.html
+++ b/Index.html
@@ -193,7 +193,7 @@
 
         <div class="Body">
             <h1 class="highlighted">Thabi's Sausage and Grill</h1> <!-- Color applied through class -->
-            <img src="images/Logo.jpeg" alt="Thabi's Sausage and Grill Logo">
+            <img src="images/logo.jpg" alt="Thabi's Sausage and Grill Logo">
             <h2>About Thabi's Sausage and Grill</h2>
             <p class="about-us-text">Thabi's Sausage and Grill is a locally established business aiming to provide the best grilled sausages in town.</p>
             <p class="about-us-text">Our goal is to satisfy customers with delicious, freshly grilled sausages, BBQ, and other mouth-watering food options.</p>
